--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -26,14 +26,20 @@
           </li>
         </ul>
 
-        <form class="rk-search">
-          <input type="text" placeholder="Search" id="urku-search" class="rk-search-field">
+        <div class="rk-search">
+          <input type="text"
+                 (keyup.enter)="buscarProducto( txtBuscar.value )"
+                 placeholder="Buscar..."
+                 id="urku-search"
+                 class="rk-search-field"
+                 #txtBuscar>
+
           <label for="urku-search">
             <svg>
               <use xlink:href="assets/img/symbols.svg#icon-search"></use>
             </svg>
           </label>
-        </form>
+        </div>
 
         
       </nav>
